# run_local

./: Dockerfile  jenkins_entry.sh  pyproject.toml  run_local.sh  telegram-send.conf
