[tool.poetry]
name = "lyft-splash-shoot"
version = "0.1.0"
description = ""
authors = ["Aleksey Parfyonov <kantengri3@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fire = "^0.4.0"
torch = "^1.12.1"
matplotlib = "^3.5.2"
opencv-python = "^4.6.0"
pyquaternion = "^0.9.9"
torchvision = "^0.13.1"
efficientnet-pytorch = "^0.7.1"
tensorboardX = "^2.5.1"
nuscenes-devkit = "1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
